--- a/sass/actors/_defense-containers.scss
+++ b/sass/actors/_defense-containers.scss
@@ -18,10 +18,6 @@
   width: 95%;
 }
 
-.essence20 .defense-container {
-  margin-left: 20px;
-}
-
 .essence20 .defense-container-1 {
   padding-left: v.$padding;
   padding-right: v.$padding;
