--- a/sass/assets/_common-container.scss
+++ b/sass/assets/_common-container.scss
@@ -4,7 +4,6 @@
   grid-gap: 5px;
   grid-template-areas:
     "common-container-1 common-container-2 common-container-3";
-  padding-bottom: 15px;
 }
 
 .essence20 .common-container-1 {
