--- a/sass/assets/_skill.scss
+++ b/sass/assets/_skill.scss
@@ -86,6 +86,7 @@
   box-shadow: 4px 4px 0 #0a0a0a;
   width: 100%;
   justify-content: left;
+  min-width: 195px;
 }
 
 
